Fix: Secondary stretch 스타일 수정 v2

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -291,7 +291,7 @@
   padding: 14px 24px;
   border-radius: 12px;
   font-size: var(--font-size-18);
-  font-weight: var(--font-weight-regular);
+  font-weight: var(--font-weight-bold);
   letter-spacing: -0.16px;
   line-height: 26px;
 }
